--- a/index.html
+++ b/index.html
@@ -28,14 +28,73 @@
                         <h4>Morgan Oakley (@morgan)</h4> </span>
                 </div>
                 <div class="b2">
-                    <button>New</button>
-                    <button>Upload</button>
-                    <button>Share</button>
+                    <button class="btn-header">New</button>
+                    <button class="btn-header">Upload</button>
+                    <button class="btn-header">Share</button>
                 </div>
             </div>
         </div>
-        <div class="sidebar"></div>
-        <div class="main-content"></div>
+        <div class="sidebar">
+            <p id="title-sidebar">Dashboard</p>
+            <div class="sb-first-row">
+                <p>Home</p>
+                <p>Profile</p>
+                <p>Messages</p>
+                <p>History</p>
+                <p>Tasks</p>
+                <p>Communities</p>
+            </div>
+
+            <div class="sb-second-row">
+                <p>Settings</p>
+                <p>Support</p>
+                <p>Privacy</p>
+            </div>
+        </div>
+        <div class="main-content">
+            
+            <div class="mc-left">
+                <div class="projects-title">
+                    <p>your projects</p>
+                </div>
+                <div class="project-divs">
+                    <div class="projects">
+                        <p>project A</p>
+                        <p>Super cool project xd</p>
+                    </div>
+                    <div class="projects">
+                        <p>project B</p>
+                        <p>another super cool project xd</p>
+                    </div>
+                    <div class="projects">
+                        <p>project C</p>
+                        <p>I want some ramen</p>
+                    </div>
+                    <div class="projects">
+                        <p>project D</p>
+                        <p>have you ever heard the tale of Plagueis the wise</p>
+                    </div>
+                    <div class="projects">
+                        <p>project E</p>
+                        <p>I LIKE MEMES XD</p>
+                    </div>
+                    <div class="projects">
+                        <p>smells like updog in here</p>
+                        <p>what's updog</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="mc-right">
+                <div class="announcements">
+
+                </div>
+
+                <div class="trending">
+
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
