--- a/index.html
+++ b/index.html
@@ -60,19 +60,35 @@
                 <div class="project-divs">
                     <div class="projects">
                         <p>project A</p>
-                        <p>Super cool project xd</p>
+                        <p>Super cool project xd. 
+                            This is some placeholder text yooo,
+                            lmao yes lol I am da captain now.
+                            Kid A is one of my favourite albums
+
+                        </p>
                     </div>
                     <div class="projects">
                         <p>project B</p>
-                        <p>another super cool project xd</p>
+                        <p>another super cool project xd.
+                            This is some placeholder text yooo,
+                            lmao yes lol I am da captain now.
+                            Kid A is one of my favourite albums
+                        </p>
                     </div>
                     <div class="projects">
                         <p>project C</p>
-                        <p>I want some ramen</p>
+                        <p>I want some ramen. 
+                            This is some placeholder text yooo,
+                            lmao yes lol I am da captain now.
+                            Kid A is one of my favourite albums
+                        </p>
                     </div>
                     <div class="projects">
                         <p>project D</p>
-                        <p>have you ever heard the tale of Plagueis the wise</p>
+                        <p>have you ever heard the tale of Plagueis the wise?
+                            I thought not. It's not a story the Jedi would tell you
+                            xdxd
+                        </p>
                     </div>
                     <div class="projects">
                         <p>project E</p>
@@ -86,11 +102,59 @@
             </div>
 
             <div class="mc-right">
-                <div class="announcements">
+                <div class="announcements-section">
+                    <p>Announcements</p>
+                    <div class="announcements">
+                        <div>
+                            <p>Site Maintenance</p>
+                            <p>Vestibulum parabellum John Wick something something yaaas</p>
+                            <hr class="separator">
+                        </div>
+                        <div>
+                            <p>Sonic the Hedgehog</p>
+                            <p>Is very very fast! It'd be super cool to be that fast.
+                                Aliquam dictum accumsan portitor something latin something...
+                            </p>
+                            <hr class="separator">
+                        </div>
+                        <div>
+                            <p>My third div</p>
+                            <p>Phaselius efficitur nisi eget elit consectetur, eget condimentum
+                                ante auctor. Cras fingilla sagittis sem in something...
+                            </p>
+                        </div>
+                    </div>
 
                 </div>
 
-                <div class="trending">
+                <div class="trending-section">
+                    <p>Trending</p>
+                    <div class="trending">
+                        <div>
+                            <span>
+                                <p>@tegan</p>
+                                <p>World Peace</p>
+                            </span>
+                        </div>
+                        <div>
+                            <span>
+                                <p>@morgan</p>
+                                <p>Super cool project</p>
+                            </span>
+                        </div>
+                        <div>
+                            <span>
+                                <p>@Kendall</p>
+                                <p>Succession xdxd</p>
+                            </span>
+                        </div>
+                        <div>
+                            <span>
+                                <p>@Me</p>
+                                <p>I'm gonna be Hokage one day! Believe it!</p>
+                            </span>
+                        </div>
+                    </div>
 
                 </div>
             </div>
