Base layout almost ready

--- a/index.html
+++ b/index.html
@@ -54,12 +54,16 @@
         <div class="main-content">
             
             <div class="mc-left">
+                <p class="titley">Your projects</p>
+                <!-- MAYBE THE PROBLEM IS THAT THEY'RE INSIDE THE DIV!
+                IF WE PUT THEM ABOVE THIS COMMNENT, THEN THEY'D BE
+            OUTSIDE OF THAT GRID! SO THEY WOULDN'T BE CONSTRAAINED TO THAT GRID'S
+             FIRST ROW!!! -->
                 <div class="projects-title">
-                    <p>your projects</p>
                 </div>
                 <div class="project-divs">
                     <div class="projects">
-                        <p>project A</p>
+                        <p class="little-title">project A</p>
                         <p>Super cool project xd. 
                             This is some placeholder text yooo,
                             lmao yes lol I am da captain now.
@@ -68,7 +72,7 @@
                         </p>
                     </div>
                     <div class="projects">
-                        <p>project B</p>
+                        <p class="little-title">project B</p>
                         <p>another super cool project xd.
                             This is some placeholder text yooo,
                             lmao yes lol I am da captain now.
@@ -76,7 +80,7 @@
                         </p>
                     </div>
                     <div class="projects">
-                        <p>project C</p>
+                        <p class="little-title">project C</p>
                         <p>I want some ramen. 
                             This is some placeholder text yooo,
                             lmao yes lol I am da captain now.
@@ -84,41 +88,41 @@
                         </p>
                     </div>
                     <div class="projects">
-                        <p>project D</p>
+                        <p class="little-title">project D</p>
                         <p>have you ever heard the tale of Plagueis the wise?
                             I thought not. It's not a story the Jedi would tell you
                             xdxd
                         </p>
                     </div>
                     <div class="projects">
-                        <p>project E</p>
+                        <p class="little-title">project E</p>
                         <p>I LIKE MEMES XD</p>
                     </div>
                     <div class="projects">
-                        <p>smells like updog in here</p>
+                        <p class="little-title">smells like updog in here</p>
                         <p>what's updog</p>
                     </div>
                 </div>
             </div>
 
             <div class="mc-right">
+                <p class="titley">Announcements</p>
                 <div class="announcements-section">
-                    <p>Announcements</p>
                     <div class="announcements">
                         <div>
-                            <p>Site Maintenance</p>
+                            <p class="little-title">Site Maintenance</p>
                             <p>Vestibulum parabellum John Wick something something yaaas</p>
                             <hr class="separator">
                         </div>
                         <div>
-                            <p>Sonic the Hedgehog</p>
+                            <p class="little-title">Sonic the Hedgehog</p>
                             <p>Is very very fast! It'd be super cool to be that fast.
                                 Aliquam dictum accumsan portitor something latin something...
                             </p>
                             <hr class="separator">
                         </div>
                         <div>
-                            <p>My third div</p>
+                            <p class="little-title">My third div</p>
                             <p>Phaselius efficitur nisi eget elit consectetur, eget condimentum
                                 ante auctor. Cras fingilla sagittis sem in something...
                             </p>
@@ -128,7 +132,7 @@
                 </div>
 
                 <div class="trending-section">
-                    <p>Trending</p>
+                    <p class="little-title">Trending</p>
                     <div class="trending">
                         <div>
                             <span>
